fixed spacing issue in inputs

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ td {
     font-family: 'Nunito Sans', sans-serif;
     border-radius: 4px;
     height: 29px;
-    padding-top: 15px;
+    padding-top: 10px;
     vertical-align: middle;
     width: 80%;
     padding-left: 12px;
